--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,29 +3,33 @@ agp = "8.3.1"
 kotlin = "1.9.0"
 coreKtx = "1.13.1"
 junit = "4.13.2"
-junitVersion = "1.2.0"
-espressoCore = "3.6.0"
+junitVersion = "1.1.3"
+espressoCore = "3.4.0"
 lifecycleRuntimeKtx = "2.8.2"
 activityCompose = "1.8.2"
 composeBom = "2023.08.00"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
+androidx-lifecycle-viewmodel-compose = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-compose", version.ref = "lifecycleRuntimeKtx" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
 androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
 androidx-lifecycle-runtime-ktx = { group = "androidx.lifecycle", name = "lifecycle-runtime-ktx", version.ref = "lifecycleRuntimeKtx" }
 androidx-activity-compose = { group = "androidx.activity", name = "activity-compose", version.ref = "activityCompose" }
 androidx-compose-bom = { group = "androidx.compose", name = "compose-bom", version.ref = "composeBom" }
-androidx-ui = { group = "androidx.compose.ui", name = "ui" }
-androidx-ui-graphics = { group = "androidx.compose.ui", name = "ui-graphics" }
-androidx-ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling" }
-androidx-ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-tooling-preview" }
-androidx-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest" }
-androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
-androidx-material3 = { group = "androidx.compose.material3", name = "material3" }
+androidx-ui = { group = "androidx.compose.ui", name = "ui", version = "1.3.1" }
+androidx-ui-graphics = { group = "androidx.compose.ui", name = "ui-graphics", version = "1.3.1" }
+androidx-ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling", version = "1.3.1" }
+androidx-ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-tooling-preview", version = "1.3.1" }
+androidx-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest", version = "1.3.1" }
+androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4", version = "1.3.1" }
+androidx-material3 = { group = "androidx.compose.material3", name = "material3", version = "1.0.0-alpha14" }
+playServicesAuth = { group = "com.google.android.gms", name = "play-services-auth", version = "20.4.0" }
+googleApiClientAndroid = { group = "com.google.api-client", name = "google-api-client-android", version = "1.33.0" }
+googleApiClientGson = { group = "com.google.api-client", name = "google-api-client-gson", version = "1.33.0" }
+googleApiServicesSheets = { group = "com.google.apis", name = "google-api-services-sheets", version = "v4-rev20240514-2.0.0" }
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
 jetbrainsKotlinAndroid = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
-
