--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,4 +71,8 @@ dependencies {
 
     implementation libs.androidx.navigation.compose
     implementation libs.androidx.navigation.ui.ktx
+
+    // Pager
+    implementation libs.accompanist.pager
+    implementation libs.accompanist.pager.indicators
 }
