--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,6 +61,7 @@ dependencies {
     implementation(libs.googleApiClientGson)
     implementation(libs.googleApiServicesSheets)
     implementation(libs.androidx.lifecycle.viewmodel.compose)
+    implementation libs.androidx.material3.android
     testImplementation(libs.junit)
     androidTestImplementation(libs.androidx.junit)
     androidTestImplementation(libs.androidx.espresso.core)
@@ -71,4 +72,6 @@ dependencies {
 
     implementation libs.androidx.navigation.compose
     implementation libs.androidx.navigation.ui.ktx
+    implementation libs.androidx.material3.v121
+
 }
