--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -8,11 +8,14 @@ espressoCore = "3.4.0"
 lifecycleRuntimeKtx = "2.8.2"
 activityCompose = "1.8.2"
 composeBom = "2023.08.00"
+material3 = "1.2.1"
 navigationCompose = "2.5.3"
+material3Android = "1.3.1"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 androidx-lifecycle-viewmodel-compose = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-compose", version.ref = "lifecycleRuntimeKtx" }
+androidx-material3-v121 = { module = "androidx.compose.material3:material3", version.ref = "material3" }
 androidx-navigation-compose = { module = "androidx.navigation:navigation-compose", version.ref = "navigationCompose" }
 androidx-navigation-ui-ktx = { module = "androidx.navigation:navigation-ui-ktx", version.ref = "navigationCompose" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
@@ -32,6 +35,7 @@ playServicesAuth = { group = "com.google.android.gms", name = "play-services-aut
 googleApiClientAndroid = { group = "com.google.api-client", name = "google-api-client-android", version = "1.33.0" }
 googleApiClientGson = { group = "com.google.api-client", name = "google-api-client-gson", version = "1.33.0" }
 googleApiServicesSheets = { group = "com.google.apis", name = "google-api-services-sheets", version = "v4-rev20240514-2.0.0" }
+androidx-material3-android = { group = "androidx.compose.material3", name = "material3-android", version.ref = "material3Android" }
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
